# mprpc

./: CMakeLists.txt  README.md
example/callee/: CMakeLists.txt  userservice.cpp
example/caller/: CMakeLists.txt  calluserservice.cpp
lib/include/: logger.hpp  rpcheader.pb.h  rpcprovider.hpp  zookeeperutil.hpp
src/: CMakeLists.txt  logger.cpp  mprpcapplication.cpp  mprpcchannel.cpp  mprpcconfig.cpp  mprpccontroller.cpp  rpcheader.pb.cc  rpcheader.proto  rpcprovider.cpp  zookeeperutil.cpp
src/include/: lockqueue.hpp  mprpcapplication.hpp  mprpcchannel.hpp  mprpcconfig.hpp  mprpccontroller.hpp
